--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@
 
 # dependencies
 /node_modules
+package-lock.json
 /.pnp
 .pnp.js
+.idea
 
 # testing
 /coverage
@@ -14,6 +16,7 @@
 # misc
 .DS_Store
 .env.local
+/.env
 .env.development.local
 .env.test.local
 .env.production.local
