--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^5.1.3",
     "dotenv": "^16.0.0",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.2.2",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.0",
+    "sass": "^1.49.9",
+    "sass-loader": "^12.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
