--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.0",
+    "he": "^1.2.0",
     "react": "^18.0.0",
-    "react-bootstrap": "^2.2.2",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
@@ -38,5 +38,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^8.12.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react-hooks": "^4.1.0"
   }
 }
